deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alukachai
  namespace: candidate-e
  annotations:
    external-dns.alpha.kubernetes.io/hostname: alukachai.test-subaccount-1-v02.test-subaccount-1.rr.mu
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: alukachai.test-subaccount-1-v02.test-subaccount-1.rr.mu
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
